k8s/light-ssr-traefik-split.yml
###
# Host the SSR service and route only search-engine traffic from domain through SSR.
###
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: light-ssr-split
spec:
  selector:
    matchLabels:
      app: light-ssr-split
  replicas: 1
  template:
    metadata:
      labels:
        app: light-ssr-split
    spec:
      containers:
      - image: sorena/light-ssr:1.0.4
        name: light-ssr-split
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 5
        # Define readiness probe, pod is included in traffic load balancing when successful
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 5

---
apiVersion: v1
kind: Service

metadata:
  name: light-ssr-split
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: light-ssr-split

---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: light-ssr-origin
spec:
  selector:
    matchLabels:
      app: light-ssr-origin
  replicas: 1
  template:
    metadata:
      labels:
        app: light-ssr-origin
    spec:
      containers:
      - image: containous/whoami:v1.5.0
        name: light-ssr-origin

---
apiVersion: v1
kind: Service

metadata:
  name: light-ssr-origin
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: light-ssr-origin

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: light-ssr-middleware-replace-path
spec:
  replacePathRegex:
    regex: ^/(.*)
    replacement: /render

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: light-ssr-origin
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`light-ssr-split.demo.thyme.lightops.dk`) && PathPrefix(`/`)
    kind: Rule
    priority: 1
    services:
    - name: light-ssr-origin # Route direct to origin
      port: 80
  - match: Host(`light-ssr-split.demo.thyme.lightops.dk`) && PathPrefix(`/`) && HeadersRegexp(`User-Agent`, `(Google|facebot|facebook|bingbot|BingPreview|msnbot|Slurp|DuckDuckBot|Baidu|YandexBot|Sogou|Exabot|ia_archiver|AOLBuild|archive\\.org_bot)`)
    kind: Rule
    priority: 2 # Highest priority
    services:
    - name: light-ssr-split # Route through SSR
      port: 80
    middlewares:
      - name: light-ssr-middleware-replace-path
