k8s/light-ssr-traefik.yml
###
# Host the SSR service and route all traffic from domain.
###
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: light-ssr
spec:
  selector:
    matchLabels:
      app: light-ssr
  replicas: 1
  template:
    metadata:
      labels:
        app: light-ssr
    spec:
      containers:
      - image: sorena/light-ssr:1.0.4
        name: light-ssr
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 5
        # Define readiness probe, pod is included in traffic load balancing when successful
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 5

---
apiVersion: v1
kind: Service

metadata:
  name: light-ssr
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: light-ssr

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: light-ssr
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`light-ssr.demo.thyme.lightops.dk`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: light-ssr
      port: 80
